--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -10,6 +10,6 @@
         <li>Design influenced by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>
       </ul>
     </div>
-    <div id="go-top" class="text-center"><a class="smoothscroll" title="Back to Top" href="#home"><i class="fa fa-chevron-up"></i></a></div>
+    <div id="go-top" class="text-center"><a title="Back to Top" href="#home"><i class="fa fa-chevron-up"></i></a></div>
   </div>
 </footer>
