--- a/source/_header.erb
+++ b/source/_header.erb
@@ -3,10 +3,10 @@
     <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a>
     <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
     <ul id="nav" class="nav">
-      <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
-      <li><a class="smoothscroll" href="#about">About</a></li>
-      <li><a class="smoothscroll" href="#resume">Resume</a></li>
-      <li><a class="smoothscroll" href="#education">Education</a></li>
+      <li class="current"><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#resume">Resume</a></li>
+      <li><a href="#education">Education</a></li>
     </ul>
   </nav>
   <div class="row banner text-center">
@@ -21,6 +21,6 @@
     </div>
   </div>
   <p class="scrolldown">
-    <a class="smoothscroll" href="#about"><i class="fa fa-chevron-circle-down"></i></a>
+    <a href="#about"><i class="fa fa-chevron-circle-down"></i></a>
   </p>
 </header>
