--- a/source/stylesheets/app.css.scss
+++ b/source/stylesheets/app.css.scss
@@ -2,14 +2,13 @@
 @import "foundation.scss";
 @import "font-awesome.scss";
 @import "fonts.css.scss";
-
 $body-color: #0f0f0f;
 $bar-color: #313131;
 $a-hover-color: #11ABB0;
 $text-gray-color: #525252;
 $text-lighter-color: #EBEEEE;
-
 /* General START */
+
 body {
     background-color: $body-color;
 }
@@ -26,12 +25,12 @@ section {
     padding-bottom: 90px;
 }
 /* General END */
-
 /* Header START*/
+
 header {
     height: 800px;
     min-height: 500px;
-    background: $body-color url(../images/header-background.jpg) no-repeat top center;
+    background: $body-color url(../images/header-background2.jpg) no-repeat top center;
     background-size: cover;
     overflow: hidden;
 }
@@ -54,6 +53,10 @@ header .opaque {
     background-color: #333;
 }
 
+header .highlight {
+    color: #fff;
+}
+
 header .banner-text h1 {
     font: 90px/1.1em 'opensans-bold', sans-serif;
     color: #fff;
@@ -64,16 +67,16 @@ header .banner-text h1 {
 
 header .banner-text h3 {
     font: 18px/1.9em 'librebaskerville-regular', serif;
-    color: #fff;
-    margin: 0 auto;
+    color: #A8A8A8;
     width: 70%;
-    text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
+    margin: 0 auto;
+    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
 
 header .banner-text hr {
     width: 60%;
-    margin: 12px auto;
-    border-color: rgba(175, 175, 175, 0.6);
+    margin: 32  px auto;
+    border-color: rgba(175, 175, 175, 0.2);
 }
 
 header .social {
@@ -151,8 +154,8 @@ ul#nav li.current a {
     color: #F06000;
 }
 /* Header END */
-
 /* About START */
+
 #about {
     background: #2B2B2B;
 }
@@ -178,8 +181,8 @@ ul#nav li.current a {
     font-size: 20px;
 }
 /* About END */
-
 /* Resume START */
+
 .main_content {
     background: #fff;
 }
@@ -277,7 +280,7 @@ ul#nav li.current a {
 }
 
 .skill1 {
-    width: 60%;
+    width: 70%;
 }
 
 .skill2 {
@@ -285,23 +288,23 @@ ul#nav li.current a {
 }
 
 .skill3 {
-    width: 50%;
+    width: 60%;
 }
 
 .skill4 {
-    width: 90%;
+    width: 60%;
 }
 
 .skill5 {
-    width: 80%;
+    width: 75%;
 }
 
 .skill6 {
-    width: 50%;
+    width: 85%;
 }
 /* Resume END */
-
 /* Education START */
+
 #education {
     background: #191919;
     color: #636363;
@@ -334,12 +337,12 @@ ul#nav li.current a {
     top: -10px;
 }
 
-#education h3{
+#education h3 {
     color: $text-lighter-color;
 }
 /* Education END */
-
 /* Footer START */
+
 footer {
     padding-top: 48px;
     margin-bottom: 48px;
@@ -411,3 +414,78 @@ footer .social-links li:first-child {
     background-color: $a-hover-color;
 }
 /* Footer END */
+
+@media only screen and (max-width: 1024px) {
+    header .banner-text h1 {
+        font: 80px/1.1em 'opensans-bold', sans-serif;
+        letter-spacing: -1px;
+        margin: 0 auto 12px auto;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    header .banner {
+        padding-bottom: 12px;
+    }
+    header .banner-text h1 {
+        font: 78px/1.1em 'opensans-bold', sans-serif;
+        letter-spacing: -1px;
+    }
+    header .banner-text h3 {
+        font: 17px/1.9em 'librebaskerville-regular', serif;
+        width: 80%;
+    }
+    header .banner-text hr {
+        width: 65%;
+        margin: 12px auto;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    header .banner {
+        padding-bottom: 12px;
+        padding-top: 6px;
+    }
+    header .banner-text h1 {
+        font: 68px/1.1em 'opensans-bold', sans-serif;
+    }
+    header .banner-text h3 {
+        font: 16px/1.9em 'librebaskerville-regular', serif;
+        width: 85%;
+    }
+    header .banner-text hr {
+        width: 80%;
+        margin: 18px auto;
+    }
+    header .social {
+        margin: 18px 0 24px 0;
+        font-size: 24px;
+        line-height: 36px;
+    }
+    header .social li {
+        margin: 0 10px;
+    }
+    header .scrolldown {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    header .banner {
+        padding-top: 24px;
+    }
+    header .banner-text h1 {
+        font: 40px/1.1em 'opensans-bold', sans-serif;
+        margin: 0 auto 24px auto;
+    }
+    header .banner-text h3 {
+        font: 14px/1.9em 'librebaskerville-regular', sans-serif;
+        width: 90%;
+    }
+    header .social {
+        font-size: 20px;
+    }
+    header .social li {
+        margin: 0 6px;
+    }
+}
